Resolviendo preguntas del ejemplo_svm

--- a/Ejemplos/Ejemplo_SVM.ipynb
+++ b/Ejemplos/Ejemplo_SVM.ipynb
@@ -567,6 +567,7 @@
     "# C = 1 es el valor por defecto en scikit-learn.\n",
     "# Funciona bien como referencia.\n",
     "# Permite mostrar que una SVM lineal no es suficiente en datos no lineales.\n",
+    "# Recordar que C debe de ser potencias de 10 (0, 0.1, 1, 10, 100, ...)\n",
     "svm_lineal = SVC(kernel=\"linear\", C=1.0, random_state=42)\n",
     "svm_rbf = SVC(kernel=\"rbf\", C=5.0, gamma=2.0, random_state=42)\n",
     "# C y gamma se eligen porque:\n",
@@ -722,19 +723,36 @@
     "\n",
     "1. ¿Por qué una SVM con kernel lineal no es capaz de separar correctamente los datos generados en este ejemplo? Relaciona tu respuesta con la forma de los datos.\n",
     "\n",
+    "Porque con el lineal, es imposible realizar una separación correcta de estos puntos, esto se aprecia en la primera representación, la cual lo divide por una linea, la cual no tiene sentido, a diferencia de RBF\n",
+    "\n",
     "2. Observa la frontera de decisión obtenida con el kernel RBF. ¿Qué diferencia principal aprecias respecto a la frontera generada por la SVM lineal?\n",
+    "\n",
+    "La principal diferencia es que el modelo RBF, es capaz de cortar los datos y ajustarse mejor, porque es capaz de representarlo con un \"ciruculo\" (aunque luego sea un cono en 3D). A difrencia del modelo lineal, que intenta separarlo por una línea.\n",
     "\n",
     "3. Explica por qué es necesario escalar las variables antes de entrenar una SVM. ¿Qué podría ocurrir si se entrenara el modelo sin realizar el escalado?\n",
     "\n",
+    "Es necesario realizar un escalado, porque ciertas variables con cierto peso, si no se las aplica un escalado influyen negativamente, descompensando el plano creado\n",
+    "\n",
     "4. ¿Qué papel juegan los parámetros *C* y *gamma* en el comportamiento de la SVM con kernel RBF? Describe qué efecto tendría aumentar excesivamente cada uno de ellos.\n",
+    "\n",
+    "La importancia del parametro C es controlar el margen máximo (controla la penalización por errores), y el gamma controla el alcance de cada variable. Si aumentamos excesivamente el valor de C, el número de errores bajará, y con gamma, hace que la influencia de cada punto es más local (adapta a patrones específicos)\n",
     "\n",
     "5. Analiza las matrices de confusión obtenidas para ambos modelos. ¿Qué tipo de errores comete con mayor frecuencia la SVM lineal? ¿Cómo mejora este aspecto la SVM con kernel RBF?\n",
     "\n",
+    "La principal diferencia entre las dos matrices de confusión, es que la líneal tiene una precision baja (falsos positivos), debido a que la resolución no es correcta, por eso ambás diagonales de la matriz de relación salen así, dando lugar a una precision baja.\n",
+    "Sin embargo, el SVM con kernel RBF, hace una matriz perfecta, dejando todos los valores en la diagonal principal, esto indica que recoge y agrupa correctamente los datos.\n",
+    "\n",
     "6. ¿Por qué es importante separar los datos en conjuntos de entrenamiento y prueba? ¿Qué información aporta el conjunto de prueba sobre el modelo entrenado?\n",
+    "\n",
+    "Es importante separar los datos de entrenamiento y prueba, porque despues de entrenar el modelo hemos de comprobar si el modelo es capaz de adaptarse a nuevos datos. Es decir, si el modelo tiene overfitting o no.\n",
     "\n",
     "7. En este ejemplo se ha utilizado el parámetro `stratify=y` en la división de los datos. Explica qué problema podría aparecer si no se utilizara este parámetro.\n",
     "\n",
-    "8. Desde un punto de vista práctico, ¿en qué tipo de problemas reales consideras que sería adecuado utilizar una SVM con kernel RBF en lugar de una SVM lineal?\n"
+    "Si no se usa stratify=y, puede pasar que el split deje proporciones muy distintas de clases en entrenamiento y en prueba (por ejemplo, que una clase quede infra-representada o casi no aparezca en test).\n",
+    "\n",
+    "8. Desde un punto de vista práctico, ¿en qué tipo de problemas reales consideras que sería adecuado utilizar una SVM con kernel RBF en lugar de una SVM lineal?\n",
+    "\n",
+    "El SVM con kernel RBF se usa normalmente, cuando no se conoce bien la frontera (separación) entre los datos. El lineal la ventaja que tiene es que, como su nombre dice los valores se pueden separar facilmente de forma lineal, se quiere evitar el sobreajuste, y buscando un modelo simple\n"
    ]
   }
  ],
